2010-02-03  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Ariya Hidayat.

        Roll back r53889 again, because roll out didn't solve flakeyness on the Windows Test bots
        https://bugs.webkit.org/show_bug.cgi?id=34399

        * platform/win/Skipped:

2010-02-03  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Ariya Hidayat.

        Rolling out r53889, because it might caused flakeyness on the Windows Test bots
        https://bugs.webkit.org/show_bug.cgi?id=34399

        * platform/win/Skipped:

2010-02-03  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Adam Barth.

        http/tests/security/xss-DENIED-window-open-javascript-url.html timed out on Windows Debug Bot
        https://bugs.webkit.org/show_bug.cgi?id=33349

        * platform/win/Skipped: http/tests/security/xss-DENIED-window-open-javascript-url.html skipped.

2010-02-02  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        Fix a bug that changes for some constraint attributes doesn't
        update validation CSS selectors.
        https://bugs.webkit.org/show_bug.cgi?id=31716

        Add tests for maxLength changes and step changes.

        * fast/forms/input-live-pseudo-selectors-expected.txt:
        * fast/forms/resources/input-live-pseudo-selectors.js:
        * fast/forms/resources/textarea-live-pseudo-selectors.js:
        * fast/forms/textarea-live-pseudo-selectors-expected.txt:

2010-02-02  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Adele Peterson.

        Bug 34198 -  Ruby text should not inherit line-height
        (https://bugs.webkit.org/show_bug.cgi?id=34198)
        
        Resetting line-height to 'normal' in the default UA style sheet.
        Adding layout-test to check for this.

        * fast/ruby/script-tests: Added.
        * fast/ruby/script-tests/ruby-line-height.js: Added.
        * fast/ruby/ruby-line-height-expected.txt: Added.