@@ -1,0 +1,2 @@
+This tests that we don't crash when using the CSS counters feature.
+
