@@ -1,5 +1,17 @@
 2010-02-03  Adele Peterson  <adele@apple.com>
 
+        Reviewed by Simon Fraser.
+
+        Fix for <rdar://problem/7594212> 
+        https://bugs.webkit.org/show_bug.cgi?id=34549 - CSS counters crash at http://www.w3.org/TR/css3-content/
+        CrashTracer: [USER] 20 crashes in Safari at com.apple.WebCore: WebCore::CounterNode::insertAfter + 319
+
+        Test: fast/css/counters/counter-before-selector-crash.html
+
+        * rendering/RenderCounter.cpp: (WebCore::updateCounters): nil check.
+
+2010-02-03  Adele Peterson  <adele@apple.com>
+
         Reviewed by Brady Eidson.
 
         Initialize the variable in the last checkin to false.  I didn't realize DRT relies on this being false.  
